# ChangeLog for mail-client/mailx
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mailx/ChangeLog,v 1.64 2011/01/22 20:58:36 xarthisius Exp $

  22 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  mailx-8.1.2.20050715-r3.ebuild:
  ppc64 stable wrt #343633

  13 Nov 2010; Raúl Porcel <armin76@gentoo.org>
  mailx-8.1.2.20050715-r3.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #343633

  06 Nov 2010; Markus Meier <maekke@gentoo.org>
  mailx-8.1.2.20050715-r3.ebuild:
  arm stable, bug #343633

  05 Nov 2010; Jeroen Roovers <jer@gentoo.org>
  mailx-8.1.2.20050715-r3.ebuild:
  Stable for HPPA PPC (bug #343633).

  03 Nov 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  mailx-8.1.2.20050715-r3.ebuild:
  x86 stable wrt bug #343633

*mailx-8.1.2.20050715-r3 (01 Nov 2010)

  01 Nov 2010; Jeroen Roovers <jer@gentoo.org>
  +mailx-8.1.2.20050715-r3.ebuild:
  Respect CC by Christian Franke (bug #235768).

  01 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  mailx-8.1.2.20050715-r2.ebuild:
  Stable on amd64 wrt bug #343633

  19 Oct 2010; Mart Raudsepp <leio@gentoo.org>
  mailx-8.1.2.20050715-r1.ebuild:
  Drop to ~mips

  30 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  mailx-8.1.2.20050715-r2.ebuild:
  Marked ~x86-macos, bug #338920

*mailx-8.1.2.20050715-r2 (11 Jul 2010)

  11 Jul 2010; Sebastian Pipping <sping@gentoo.org>
  +mailx-8.1.2.20050715-r2.ebuild,
  +files/mailx-8.1.2.20050715-offsetof.patch:
  Apply patch 225901 by Vasiliy A. Balkanov renaming internal macro
  offsetof() to offsetofmailx() to fix a compile error (bug #310493)

  11 Jan 2010; Raúl Porcel <armin76@gentoo.org>
  mailx-8.1.2.20040524-r1.ebuild, mailx-8.1.2.20050715.ebuild,
  mailx-8.1.2.20050715-r1.ebuild:
  Remove functions from ccc.eclass as its going to be removed

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  mailx-8.1.2.20050715-r1.ebuild:
  Transfer Prefix keywords
