@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX mailx-8.1.2.20050715-nostrip.patch 668 RMD160 86080719a66d0889f6fa6458ab65e72b670b3ce8 SHA1 0c04fadebc81b1ced09256421d9cc8a5b1b31cd3 SHA256 0636586473c198918e8db1d1ebfc006d3312935959532f8c2742b882da5e391e
 AUX mailx-8.1.2.20050715-offsetof.patch 1566 RMD160 1c6e36cd7607550ef7616d17a4ca2a1223f7a85b SHA1 640f93913ea9d517d9ae6233450c069cdb970eee SHA256 be6bf29554e6f695492e2c9dd3a8e6d6e19a4e375982c7478941c61f992dfe4b
 DIST mailx_8.1.2-0.20050715cvs-1.diff.gz 36758 RMD160 bf116b8e7d1207b37d0f9451771f0f318880aff2 SHA1 f8b54d1c6fff315444f5342481fad9d5cf9b52c0 SHA256 2fb891f912624766d0bef765d69cec75ad3334dda1aa58659f3c3c1d0579c2c3
@@ -5,5 +8,23 @@ DIST mailx_8.1.2-0.20050715cvs.orig.tar.gz 94664 RMD160 9fdf63d616f2240141bf06dc
 EBUILD mailx-8.1.2.20050715-r1.ebuild 1481 RMD160 7f63289831b15b23b3aacaf1351a9be37cabb1cf SHA1 09ddbb32616d3b20b0a7ac54b7a639f8fd077561 SHA256 35c7149e175bcc4a2e837d6d371450c6d167fd22c3ad6d31e67fe8c57efcdbb1
 EBUILD mailx-8.1.2.20050715-r2.ebuild 1543 RMD160 837bbae7bcb1e7328b7f789dd82f8c2a96badd19 SHA1 4179000893f12410669d4431b38a20d5d4dada21 SHA256 e4c2ea93532b76ec924ab1d771e809825b7f307d0940b2fef941363b01fb4c88
 EBUILD mailx-8.1.2.20050715-r3.ebuild 1566 RMD160 4d16d58e9fc7a394d4b97b320c5b10d378bde963 SHA1 c4d286bec9de08d647fc71dc00738639fa8ec480 SHA256 1cd74038b3c0d6f29a7dccaeab163f02c9ba8a76e58d7db3e214f0ed7644769c
-MISC ChangeLog 11156 RMD160 2c5454ae35f3b585e9bc7108ecad77e6474654cc SHA1 0a5f5b49921cca81c89f690bf196a3739477d55e SHA256 52ac615fd8b1ea078e42572f205934a4d59511c873faf7f48c5286ce6746ca44
+EBUILD mailx-8.1.2.20050715-r4.ebuild 1754 RMD160 b811ee7af612803aeecd0760c55301e45b7e4f34 SHA1 4eceef1d37325fa66df3c88b79c44f0510986c09 SHA256 f1f202477f08182b92f959193d1759ba8f8d2e64ac14f87e45e762bbf481f5fb
+MISC ChangeLog 11317 RMD160 8830cf6e6bc1634c90b91f4bea0738354099db80 SHA1 a0228a9aab9ae2a1f0bd25e956f49ee2300b3907 SHA256 fb6c683bb94dd267d65a18f29ee70bd7779ad802f94317d9d2e4766c935d15bd
 MISC metadata.xml 161 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 SHA1 a1fecd2f7b169d621b88c6ccab9d758209fc8f19 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQIcBAEBCAAGBQJPDE1gAAoJEHfx8XVYajsfhCwP/Ra/B1IyASa+NLqJquRRF0w7
+tWLmh+XPVXMH/Jae+KqzC+d1bUaQXSfIJ8NgF1pkREWqw425eeUX0ZV0IMiNMPBT
+IBIDdeZ6sH0Wr2DSfigoA0tTWAfFcOKnrHUpQWTVLCcOSYqC6X4fWURbEgk9c98P
+MSgIGAVEAfzeC1rSjmjggxMpAwz6fx+qYjhgeRVf1Ly1ZaGuRIotUrFtXjcnBQbp
+dDC9dOyLKDgstlYA1awrpE0DBO0xmpZoBMX30b+YslLPHUgJ29dFK3KukTRPNAfl
+QQJcMHoCfNbjKDnefKV0qGmCJ0ohIKsv8aHPOkiLtHDNH6SYNYBgNHss1M/P/zZ+
+KVxkK0eOIsZym513NTX08//ZtQ7QdeQx2OsqIQFpUnqMPWR9tIg8wvizDlVh06SH
+3Lv3CARyfB67JQm0acmRPX6eq3i2lTbA6Cos1svNZuNSt+91Ss5WEe/NYF3tYGC0
+nKgiRnpfE1sLlyI6tz8Vt1p77EKVwJVEkjoUFoihiBWlu25UI1iWAjcJAanz3hmn
+blM3l6ncuMNB/57zQqw3+AL8S3+QVc39LujLUsnQeTKcnz73EAoeMSe7fhPKsTaG
+1gDK4bB2de1U2F5F2jvxBnE95oGwhDrxzuZxk7N1I/new3vsetrFDtxn0aMFORsb
+ZdsLPeKsj9R5hpvV/Klb
+=0i3g
+-----END PGP SIGNATURE-----
